@@ -31,6 +31,14 @@ input[type="submit"] {
 	margin: 5px;
 }
 
+/*** uses some css 2 keywords ****/
+form input.objectA {
+    position: absolute;
+    text-align: left;
+    width: 550px;
+    z-index: 2;
+}
+
 /** Syntax Error/Non WC3 compliant css **/
 a:what { color: red; }
 
